Fix counter on mobile

--- a/src/iquitsupportit/static/css/style.css
+++ b/src/iquitsupportit/static/css/style.css
@@ -101,6 +101,14 @@ hr {
     width: inherit;
     margin: 35px 0 15px 0;
 }
+@media only screen and (max-width : 480px) {
+    #clock .minutes ~ .flip {
+       display: none;
+    }
+    #clock .minutes {
+        display: none;
+    }
+}
 #charity-box {
     font-size: 1.8em;
 }
